# rapidinstall

./: .gitignore  README.md  pyproject.toml
src/rapidinstall/: __init__.py  run.py
